Floatsz-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -686,7 +686,7 @@ h4 span.text-info {
   width: 50%;
 }
 .floatBtn {
-  z-index: 99;
+  z-index: 102;
   border: none;
   outline: none;
   color: black;
